documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32.H

typedef void VOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

P71W32API BOOL __stdcall PC708_ModeIsNotSerial(HCARD handleval);

P71W32API BOOL __stdcall PC708_ModeIsRT(HCARD handleval);

P71W32API BOOL __stdcall PC708_ModeIsSerial(HCARD handleval);

P71W32API USHORT __stdcall PC708_ModeRd(HCARD handleval);

P71W32API VOID __stdcall PC708_ModeWr(USHORT mode,HCARD handleval);

P71W32API ULONG __stdcall PC708_MonBlkRd(LPUSHORT buf,ULONG bufcount,LPULONG blkcnt,HCARD handleval);

P71W32API ULONG __stdcall PC708_MonBlkRdEx(LPUSHORT buf,ULONG bufcount,ULONG maxblkcnt,LPULONG blkcnt,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_MonClear(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_MonConfig(ULONG configval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_MonConfigEx(ULONG configval,ULONG moncount,USHORT cardnum,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_MonConfigExx(ULONG configval,ULONG seqaddr,ULONG moncount,USHORT cardnum,HCARD handleval);

P71W32API BOOL __stdcall PC708_MonIsRunning(HCARD handleval);

P71W32API USHORT __stdcall PC708_MonRd(LPUSHORT buf,HCARD handleval);

P71W32API USHORT __stdcall PC708_MonRdEx(LPUSHORT buf,USHORT bufcount,HCARD handleval);

P71W32API BOOL __stdcall PC708_MonResume(HCARD handleval);

P71W32API BOOL __stdcall PC708_MonStart(HCARD handleval);

P71W32API BOOL __stdcall PC708_MonStatus(HCARD handleval);

P71W32API BOOL __stdcall PC708_MonStop(HCARD handleval);

P71W32API MSGADDR __stdcall PC708_MsgBlockRd(LPUSHORT buf,MSGADDR msgaddr,HCARD handleval);

P71W32API MSGADDR __stdcall PC708_MsgBlockWr(LPUSHORT buf,MSGADDR msgaddr,HCARD handleval);

P71W32API USHORT __stdcall PC708_MsgCheck(MSGADDR msgaddr,HCARD handleval);

P71W32API MSGADDR __stdcall PC708_MsgCommRd(LPUSHORT buf,MSGADDR msgaddr,HCARD handleval);

P71W32API MSGADDR __stdcall PC708_MsgCommWr(LPUSHORT buf,MSGADDR msgaddr,HCARD handleval);

P71W32API MSGADDR __stdcall PC708_MsgConfig(ULONG configval,HCARD handleval);

P71W32API MSGADDR __stdcall PC708_MsgConfigEx(ULONG configval,USHORT cwd,HCARD handleval);

P71W32API USHORT __stdcall PC708_MsgCWD1Rd(MSGADDR msgaddr,HCARD handleval);

P71W32API VOID __stdcall PC708_MsgCWD1Wr(USHORT cwd1,MSGADDR msgaddr,HCARD handleval);

P71W32API USHORT __stdcall PC708_MsgCWD2Rd(MSGADDR msgaddr,HCARD handleval);

P71W32API VOID __stdcall PC708_MsgCWD2Wr(USHORT cwd2,MSGADDR msgaddr,HCARD handleval);

P71W32API VOID __stdcall PC708_MsgDataRd(LPUSHORT buf,INT count,MSGADDR msgaddr,HCARD handleval);

P71W32API VOID __stdcall PC708_MsgDataWr(LPUSHORT buf,INT count,MSGADDR msgaddr,HCARD handleval);

P71W32API USHORT __stdcall PC708_MsgErrorRd(MSGADDR msgaddr,HCARD handleval);

P71W32API VOID __stdcall PC708_MsgErrorWr(USHORT value,MSGADDR msgaddr,HCARD handleval);

P71W32API ULONG __stdcall PC708_MsgFieldRd(USHORT fieldtype,MSGADDR msgaddr,HCARD handleval);

P71W32API ULONG __stdcall PC708_MsgFieldWr(ULONG fieldval,USHORT fieldtype,MSGADDR msgaddr,HCARD handleval);

P71W32API USHORT __stdcall PC708_MsgFlagRd(MSGADDR msgaddr,HCARD handleval);

P71W32API VOID __stdcall PC708_MsgFlagWr(USHORT msgflag,MSGADDR msgaddr,HCARD handleval);

P71W32API BOOL __stdcall PC708_MsgIsAccessed(MSGADDR msgaddr,HCARD handleval);

P71W32API USHORT __stdcall PC708_MsgOptRd(MSGADDR msgaddr,HCARD handleval);

P71W32API VOID __stdcall PC708_MsgOptWr(USHORT msgopt,MSGADDR msgaddr,HCARD handleval);

P71W32API MSGADDR __stdcall PC708_MsgReset(MSGADDR msgaddr,HCARD handleval);

P71W32API USHORT __stdcall PC708_MsgSWD1Rd(MSGADDR msgaddr,HCARD handleval);

P71W32API USHORT __stdcall PC708_MsgSWD2Rd(MSGADDR msgaddr,HCARD handleval);

P71W32API ULONG __stdcall PC708_Mul(ULONG mula,ULONG mulb);

P71W32API USHORT __stdcall PC708_PortRd(USHORT addrval,HCARD handleval);

P71W32API VOID __stdcall PC708_PortWr(USHORT value,USHORT addrval,HCARD handleval);

P71W32API USHORT __stdcall PC708_ProgRdW(USHORT addrval,HCARD handleval);

P71W32API VOID __stdcall PC708_ProgWrW(USHORT value,USHORT addrval,HCARD handleval);

P71W32API VOID __stdcall PC708_RAMFill(USHORT value,ULONG addrval,ULONG countval,HCARD handleval);

P71W32API USHORT __stdcall PC708_RAMRdB(ULONG addrval,HCARD handleval);

P71W32API ULONG __stdcall PC708_RAMRdL(ULONG addrval,HCARD handleval);

P71W32API VOID __stdcall PC708_RAMRdsW(LPUSHORT valueptr,ULONG addrval,USHORT countval,HCARD handleval);

P71W32API VOID __stdcall PC708_RAMRdsxW(LPUSHORT valueptr,ULONG addrval,USHORT countval,HCARD handleval);

P71W32API USHORT __stdcall PC708_RAMRdW(ULONG addrval,HCARD handleval);

P71W32API VOID __stdcall PC708_RAMWipe(HCARD handleval);

P71W32API VOID __stdcall PC708_RAMWipeEx(USHORT value,HCARD handleval);

P71W32API VOID __stdcall PC708_RAMWrB(USHORT value,ULONG addrval,HCARD handleval);

P71W32API VOID __stdcall PC708_RAMWrL(ULONG value,ULONG addrval,HCARD handleval);

P71W32API VOID __stdcall PC708_RAMWrsW(LPUSHORT valueptr,ULONG addrval,USHORT countval,HCARD handleval);

P71W32API VOID __stdcall PC708_RAMWrsxW(LPUSHORT valueptr,ULONG addrval,USHORT countval,HCARD handleval);

P71W32API VOID __stdcall PC708_RAMWrW(USHORT value,ULONG addrval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_RcvAlloc(USHORT framenum,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_RcvConfigExx(ULONG rtconfigval,USHORT intfreq,ULONG monconfigval,ULONG intconfigval,USHORT inttotal,ULONG msgconfigval,HCARD handleval);

P71W32API USHORT __stdcall PC708_RcvCountRd(HCARD handleval);

P71W32API VOID __stdcall PC708_RcvCountWr(USHORT countval,HCARD handleval);

P71W32API USHORT __stdcall PC708_RcvDataCountRd(HCARD handleval);

P71W32API VOID __stdcall PC708_RcvDataCountWr(USHORT countval,HCARD handleval);

P71W32API MSGADDR __stdcall PC708_RcvIndex(USHORT framenum,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_RTConfig(ULONG configval,INT taval,USHORT intfreq,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_RTConfigEx(ULONG configval,INT taval,USHORT intfreq,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_RTConfigExx(ULONG configval,INT taval,HCARD handleval);

P71W32API MSGADDR __stdcall PC708_RTConfigMsg(ULONG configval,MSGADDR msgaddr,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_RTReset(INT taval,HCARD handleval);

P71W32API USHORT __stdcall PC708_RTStatus(INT taval,HCARD handleval);