documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32NET.VB

    Public Declare Function PC708_ModeIsNotSerial Lib "P71W32.DLL" Alias "_PC708_ModeIsNotSerial@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_ModeIsRT Lib "P71W32.DLL" Alias "_PC708_ModeIsRT@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_ModeIsSerial Lib "P71W32.DLL" Alias "_PC708_ModeIsSerial@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_ModeRd Lib "P71W32.DLL" Alias "_PC708_ModeRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_ModeWr Lib "P71W32.DLL" Alias "_PC708_ModeWr@8" (ByVal mode As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC708_MonBlkRd Lib "P71W32.DLL" Alias "_PC708_MonBlkRd@16" (ByRef buf As UInt16, ByVal bufcount As UInt32, ByRef blkcnt As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_MonBlkRdEx Lib "P71W32.DLL" Alias "_PC708_MonBlkRdEx@20" (ByRef buf As UInt16, ByVal bufcount As UInt32, ByVal maxblkcnt As UInt32, ByRef blkcnt As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_MonClear Lib "P71W32.DLL" Alias "_PC708_MonClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_MonConfig Lib "P71W32.DLL" Alias "_PC708_MonConfig@8" (ByVal configval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_MonConfigEx Lib "P71W32.DLL" Alias "_PC708_MonConfigEx@16" (ByVal configval As UInt32, ByVal moncount As UInt32, ByVal cardnum As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_MonConfigExx Lib "P71W32.DLL" Alias "_PC708_MonConfigExx@20" (ByVal configval As UInt32, ByVal seqaddr As UInt32, ByVal moncount As UInt32, ByVal cardnum As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_MonIsRunning Lib "P71W32.DLL" Alias "_PC708_MonIsRunning@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_MonRd Lib "P71W32.DLL" Alias "_PC708_MonRd@8" (ByRef buf As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function PC708_MonRdEx Lib "P71W32.DLL" Alias "_PC708_MonRdEx@12" (ByRef buf As UInt16, ByVal bufcount As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function PC708_MonResume Lib "P71W32.DLL" Alias "_PC708_MonResume@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_MonStart Lib "P71W32.DLL" Alias "_PC708_MonStart@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_MonStatus Lib "P71W32.DLL" Alias "_PC708_MonStatus@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_MonStop Lib "P71W32.DLL" Alias "_PC708_MonStop@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_MsgBlockRd Lib "P71W32.DLL" Alias "_PC708_MsgBlockRd@12" (ByRef buf As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_MsgBlockWr Lib "P71W32.DLL" Alias "_PC708_MsgBlockWr@12" (ByRef buf As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_MsgCheck Lib "P71W32.DLL" Alias "_PC708_MsgCheck@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function PC708_MsgCommRd Lib "P71W32.DLL" Alias "_PC708_MsgCommRd@12" (ByRef buf As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_MsgCommWr Lib "P71W32.DLL" Alias "_PC708_MsgCommWr@12" (ByRef buf As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_MsgConfig Lib "P71W32.DLL" Alias "_PC708_MsgConfig@8" (ByVal configval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_MsgConfigEx Lib "P71W32.DLL" Alias "_PC708_MsgConfigEx@12" (ByVal configval As UInt32, ByVal cwd As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_MsgCWD1Rd Lib "P71W32.DLL" Alias "_PC708_MsgCWD1Rd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_MsgCWD1Wr Lib "P71W32.DLL" Alias "_PC708_MsgCWD1Wr@12" (ByVal cwd1 As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function PC708_MsgCWD2Rd Lib "P71W32.DLL" Alias "_PC708_MsgCWD2Rd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_MsgCWD2Wr Lib "P71W32.DLL" Alias "_PC708_MsgCWD2Wr@12" (ByVal cwd2 As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Sub PC708_MsgDataRd Lib "P71W32.DLL" Alias "_PC708_MsgDataRd@16" (ByRef buf As UInt16, ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Sub PC708_MsgDataWr Lib "P71W32.DLL" Alias "_PC708_MsgDataWr@16" (ByRef buf As UInt16, ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function PC708_MsgErrorRd Lib "P71W32.DLL" Alias "_PC708_MsgErrorRd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_MsgErrorWr Lib "P71W32.DLL" Alias "_PC708_MsgErrorWr@12" (ByVal value As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function PC708_MsgFieldRd Lib "P71W32.DLL" Alias "_PC708_MsgFieldRd@12" (ByVal fieldtype As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_MsgFieldWr Lib "P71W32.DLL" Alias "_PC708_MsgFieldWr@16" (ByVal fieldval As UInt32, ByVal fieldtype As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_MsgFlagRd Lib "P71W32.DLL" Alias "_PC708_MsgFlagRd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_MsgFlagWr Lib "P71W32.DLL" Alias "_PC708_MsgFlagWr@12" (ByVal msgflag As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function PC708_MsgIsAccessed Lib "P71W32.DLL" Alias "_PC708_MsgIsAccessed@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_MsgOptRd Lib "P71W32.DLL" Alias "_PC708_MsgOptRd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_MsgOptWr Lib "P71W32.DLL" Alias "_PC708_MsgOptWr@12" (ByVal msgopt As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function PC708_MsgReset Lib "P71W32.DLL" Alias "_PC708_MsgReset@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_MsgSWD1Rd Lib "P71W32.DLL" Alias "_PC708_MsgSWD1Rd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function PC708_MsgSWD2Rd Lib "P71W32.DLL" Alias "_PC708_MsgSWD2Rd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function PC708_Mul Lib "P71W32.DLL" Alias "_PC708_Mul@8" (ByVal mula As UInt32, ByVal mulb As UInt32) As UInt32
    Public Declare Function PC708_PortRd Lib "P71W32.DLL" Alias "_PC708_PortRd@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_PortWr Lib "P71W32.DLL" Alias "_PC708_PortWr@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC708_ProgRdW Lib "P71W32.DLL" Alias "_PC708_ProgRdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_ProgWrW Lib "P71W32.DLL" Alias "_PC708_ProgWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub PC708_RAMFill Lib "P71W32.DLL" Alias "_PC708_RAMFill@16" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal countval As UInt32, ByVal handleval As UInt32)
    Public Declare Function PC708_RAMRdB Lib "P71W32.DLL" Alias "_PC708_RAMRdB@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function PC708_RAMRdL Lib "P71W32.DLL" Alias "_PC708_RAMRdL@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub PC708_RAMRdsW Lib "P71W32.DLL" Alias "_PC708_RAMRdsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub PC708_RAMRdsxW Lib "P71W32.DLL" Alias "_PC708_RAMRdsxW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC708_RAMRdW Lib "P71W32.DLL" Alias "_PC708_RAMRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_RAMWipe Lib "P71W32.DLL" Alias "_PC708_RAMWipe@4" (ByVal handleval As UInt32)
    Public Declare Sub PC708_RAMWipeEx Lib "P71W32.DLL" Alias "_PC708_RAMWipeEx@8" (ByVal value As UInt16, ByVal handleval As UInt32)
    Public Declare Sub PC708_RAMWrB Lib "P71W32.DLL" Alias "_PC708_RAMWrB@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub PC708_RAMWrL Lib "P71W32.DLL" Alias "_PC708_RAMWrL@12" (ByVal value As UInt32, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub PC708_RAMWrsW Lib "P71W32.DLL" Alias "_PC708_RAMWrsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub PC708_RAMWrsxW Lib "P71W32.DLL" Alias "_PC708_RAMWrsxW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub PC708_RAMWrW Lib "P71W32.DLL" Alias "_PC708_RAMWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function PC708_RcvAlloc Lib "P71W32.DLL" Alias "_PC708_RcvAlloc@8" (ByVal framenum As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_RcvConfigExx Lib "P71W32.DLL" Alias "_PC708_RcvConfigExx@28" (ByVal rtconfigval As UInt32, ByVal intfreq As UInt16, ByVal monconfigval As UInt32, ByVal intconfigval As UInt32, ByVal inttotal As UInt16, ByVal msgconfigval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_RcvCountRd Lib "P71W32.DLL" Alias "_PC708_RcvCountRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_RcvCountWr Lib "P71W32.DLL" Alias "_PC708_RcvCountWr@8" (ByVal countval As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC708_RcvDataCountRd Lib "P71W32.DLL" Alias "_PC708_RcvDataCountRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_RcvDataCountWr Lib "P71W32.DLL" Alias "_PC708_RcvDataCountWr@8" (ByVal countval As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC708_RcvIndex Lib "P71W32.DLL" Alias "_PC708_RcvIndex@8" (ByVal framenum As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_RTConfig Lib "P71W32.DLL" Alias "_PC708_RTConfig@16" (ByVal configval As UInt32, ByVal taval As Int32, ByVal intfreq As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_RTConfigEx Lib "P71W32.DLL" Alias "_PC708_RTConfigEx@16" (ByVal configval As UInt32, ByVal taval As Int32, ByVal intfreq As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_RTConfigExx Lib "P71W32.DLL" Alias "_PC708_RTConfigExx@12" (ByVal configval As UInt32, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_RTConfigMsg Lib "P71W32.DLL" Alias "_PC708_RTConfigMsg@12" (ByVal configval As UInt32, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_RTReset Lib "P71W32.DLL" Alias "_PC708_RTReset@8" (ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_RTStatus Lib "P71W32.DLL" Alias "_PC708_RTStatus@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt16
